Corrigido bug ao esconder a scrollbar

--- a/site/pf3/f3.css
+++ b/site/pf3/f3.css
@@ -357,3 +357,7 @@
 .col-sm-6{
 	margin-top: 5px;
 }
+
+html{
+	overflow: -moz-scrollbars-none;
+}
